@@ -4,6 +4,10 @@ Changelog
 2.5 - unreleased
 ----------------
 
+- Changed the language selector to respect default pages. We now link to the
+  container of the translated default page rather than the default page itself.
+  [hannosch]
+
 - Added Language as an additional index to the uid catalog. This is required
   to get at least normal reference criteria to be able to restrict their
   selections based on the language.
